New path
Signed-off-by: Thomas Bouquet <thomas.bouquet@rte-france.com>