@@ -41,7 +41,8 @@ import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 import org.slf4j.LoggerFactory;
 
-import java.nio.file.Path;
+import java.io.File;
+import java.nio.file.Paths;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -920,7 +921,7 @@ class CastorFullOptimizationTest {
     void threeCurativeInstantsWithCumulativeMaximumNumberOfApplicableRemedialActions() {
         Network network = Network.read("12Nodes_4ParallelLines.uct", getClass().getResourceAsStream("/network/12Nodes_4ParallelLines.uct"));
         Crac crac = CracImporters.importCrac(
-            Path.of(Objects.requireNonNull(getClass().getResource("/crac/small-crac-ra-limits-per-instant.json")).getFile()),
+            Paths.get(new File(Objects.requireNonNull(CastorFullOptimizationTest.class.getResource("/crac/small-crac-ra-limits-per-instant.json")).getFile()).toString()),
             network
         );
 
@@ -939,7 +940,7 @@ class CastorFullOptimizationTest {
     void threeCurativeInstantsWithCumulativeMaximumNumberOfTsos() {
         Network network = Network.read("12Nodes_4ParallelLines.uct", getClass().getResourceAsStream("/network/12Nodes_4ParallelLines.uct"));
         Crac crac = CracImporters.importCrac(
-            Path.of(Objects.requireNonNull(getClass().getResource("/crac/small-crac-ra-limits-per-instant-3-tsos.json")).getFile()),
+            Paths.get(new File(Objects.requireNonNull(CastorFullOptimizationTest.class.getResource("/crac/small-crac-ra-limits-per-instant-3-tsos.json")).getFile()).toString()),
             network
         );
 
